<resources>
    <string name="app_name" translatable="false">ElbndarMarket</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="description">description</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="not_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="required">This field is required</string>
    <string name="enter_valid_email">Enter a valid Email</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="forget_password">Forget Password</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="verification_Code">Verification Code</string>
    <string name="code">Code</string>
    <string name="prof_address">Address:</string>
    <string name="prof_payment">Payment:</string>
    <string name="prof_password">Password:</string>
    <string name="address_val">Street, City, Country</string>
    <string name="payment_val" translatable="false">PayPal</string>
    <string name="pass_val" translatable="false">********</string>
    <string name="save">Save</string>
    <string name="edit_profile">Profile - EditData</string>
    <string name="profile">Profile</string>
    <string name="shopping_cart">ShoppingCart</string>
    <string name="myCart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="setings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="settings_notifications">Notifications</string>
    <string name="notification_val">All Notifications</string>
    <string name="settings_language">Language:</string>
    <string name="language_val">English</string>
    <string name="paymentMethod_val" translatable="false">Visa</string>
    <string name="payment_method">Payment Method:</string>
    <string name="currency">Currency:</string>
    <string name="currency_val" translatable="false">$ - USD</string>
    <string name="category">category</string>
    <string name="Name">Name</string>
    <string name="price">Price: </string>
    <string name="delivry_fee">Delivery Fee: </string>
    <string name="total_price">Total Price: </string>
    <string name="checkOut">Checkout</string>
    <string name="apple_juice">Apple Juice</string>
    <string name="track_order">Track Order</string>
    <string name="back_to_shop">Back To Shop</string>
    <string name="thsnks_for_shopping">Thanks You For Shopping</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="set_location">Set Location</string>
    <string name="set_your_location_toStart">Set Your Location To Start</string>
    <string name="find_stores_around_you">find stores around you</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="or">OR</string>
    <string name="set_your_location_manually">Set Your Location Manually</string>
    <string name="Item_details">Item Details</string>
    <string name="details_description">Description:</string>
    <string name="product_quantity">Product Quantity: </string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_activity_my_orders">MyOrders</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="order_Num">Order Num</string>
    <string name="my_order">My Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="delivery_Address">Delivery Address:</string>
    <string name="order">Order:</string>
    <string name="estimate_time">Estimated Time:</string>
    <string name="order_name">Order Name</string>
    <string name="my_notifications">Notifications</string>
    <string name="categories">Categories</string>
    <string name="see_more">See More</string>
    <string name="see_all">see all</string>
    <string name="featured_products">Featured Products</string>
    <string name="online_byCreditCard">Online by Credit Card On Delivery .</string>
    <string name="cache_on_delivery">Cach On Delivery .</string>
    <string name="done">Done</string>
    <string name="card_number">Card Number:</string>
    <string name="expire_date">Expire Date:</string>
    <string name="cvv">CVV:</string>
    <string name="card_holder_name">Cardholder Name:</string>
    <string name="save_card_info">Save Card Information</string>
    <string name="by_Visa">By Visa</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="action_Cart">Cart</string>
    <string name="error_connection">Error Connection</string>
    <string name="pass_is_weak">Password should be 6 characters or more</string>
    <string name="phone_not_correct">رقم الهاتف غير صحيح</string>
    <string name="pass_not_equal">كلمتى المرور غير متطابقتين</string>
    <string name="show_items">عرض العناصر</string>
    <string name="show_subCategories">عرض الأقسام الفرعية</string>
    <string name="no_available_products">No Available Products</string>
    <string name="logining">Signing In</string>
    <string name="registering">Signing Up</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="yes">موافق</string>
    <string name="dismiss">الغاء</string>
    <string name="cart_item_removed">removed from cart!</string>
    <string name="undo">UNDO</string>
    <string name="updatting">Updatting</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_time">Detect Time</string>
    <string name="detect_date">Detect Date</string>
    <string name="detect_delivery_time">اختر وقت التوصيل</string>
    <string name="sending">Sending</string>
    <string name="no_available_orders">No Available Orders</string>
    <string name="no_waiting_orders">No waiting orders</string>
    <string name="no_completed_orders">No completed orders</string>
    <string name="loading">Loading</string>
    <string name="cost">Cost:</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select_language">اختر اللغة</string>
    <integer name="animation_duration_medium">1000</integer>
    <string name="notifications">chec</string>
    <string name="order_">Order:</string>
    <string name="home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="no_notifications">No available notfications</string>
    <string name="building_no">Building No.</string>
    <string name="floor_no">Floor No.</string>
    <string name="apartment_no">Apartment No.</string>
    <string name="villa_no">Villa No.</string>
    <string name="other">Other.</string>
    <string name="click_to_get_your_location">Click to get your Location</string>
    <string name="location_required">يجب تحديد الموقع اولا</string>
    <string name="ok">موافق</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="delete_this_Item">إزلة العنصر من المفضلة ؟</string>
    <string name="process">Process</string>
    <string name="waiting">Waiting</string>
    <string name="compeleted">Completed</string>
    <string name="choose_payment_first">Choose Payment First</string>
    <string name="get_location_success">تم تحديد موقعك بنجاح</string>
    <string name="update_location">Update Location</string>
    <string name="try_location_again">لم يتم تحديد الموقع بعد!, حاول مرة اخرى</string>
    <string name="payment_canceled">Payment Canceled</string>
    <string name="payment_failed">Payment Failed, plz try again</string>
    <string name="complete_payment_first">Plz, Complete payment First</string>
    <string name="ordered_time">Ordered Time:</string>
    <string name="should_select_image_first">You Should Select Image First</string>
    <string name="payment_successfully">Payment Success</string>
    <string name="category_title">اسم الفئة</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
</resources>
