<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_myCart"
            android:icon="@drawable/sidemenu_cart"
            android:title="@string/myCart" />
        <item
            android:id="@+id/nav_myWishlist"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_wishlist" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/sidemenu_order"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_ogout"
            android:title="@string/logout" />
    </group>

</menu>
