<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyOrders">

    <android.support.v7.widget.Toolbar
        android:id="@+id/orders_toolBar_id"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/Base.Theme.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_orders"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/myOrders_back_txtV_id"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="12dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/orders_layout_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/orders_toolBar_id"
        app:layout_constraintStart_toStartOf="@id/orders_toolBar_id"
        app:layout_constraintTop_toBottomOf="@id/orders_toolBar_id">

        <android.support.design.widget.TabLayout
            android:id="@+id/orders_tabLayout_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/darker_gray">

            <android.support.design.widget.TabItem
                android:id="@+id/process_tab_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/process" />

            <android.support.design.widget.TabItem
                android:id="@+id/waiting_tab_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/waiting" />

            <android.support.design.widget.TabItem
                android:id="@+id/completed_tab_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/compeleted" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/no_available_orders_txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_available_orders"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>