<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PaymentMethod">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/payment_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/paymentMethod"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/payment_back_txtV_id"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ic_arrow_back_black_24dp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radio_group_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/onCach_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioPaymentClicked"
                android:text="@string/cache_on_delivery"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/onDelivery_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onRadioPaymentClicked"
                android:text="@string/online_byCreditCard"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/onVisa_btn_clicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onRadioPaymentClicked"
                android:text="@string/by_Visa"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </RadioGroup>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/credit_card_info_layout_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:background="@drawable/profile_card_bg"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@id/creditCart_done_btn_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_id">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/card_number_layout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/card_number_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/card_number"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@id/card_number_layout_id"
                app:layout_constraintStart_toStartOf="@id/card_number_layout_id"
                app:layout_constraintTop_toBottomOf="@id/card_number_layout_id">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/expireDate_layout_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/expireDate_ed_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/expire_date"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/CVV_layout_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/CVV_ed_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/cvv"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cardHolder_name_layout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/card_number_layout_id"
                app:layout_constraintStart_toStartOf="@id/card_number_layout_id"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_id">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cardHolder_name_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/card_holder_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_save_card_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/save_card_info"
                app:layout_constraintEnd_toEndOf="@id/card_number_layout_id"
                app:layout_constraintStart_toStartOf="@id/card_number_layout_id"
                app:layout_constraintTop_toBottomOf="@id/cardHolder_name_layout_id" />

        </android.support.constraint.ConstraintLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/creditCart_done_btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/credit_card_info_layout_id"
            app:layout_constraintStart_toStartOf="@id/credit_card_info_layout_id" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>